--- a/templates/info.html
+++ b/templates/info.html
@@ -1,83 +1,155 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-    <style>
-        body{padding:0 100 0 100;}
-        textarea{width:300px;}
-        .text{width:300px;}
+{% include header.html %}
+{% include nav.html %}
+        <style>
+            .main-editor{margin-right: 0px;margin-left: 0px;padding:0px 15px 15px;margin:0 -15px 15px;position:relative;min-width: 350px;max-width: 800px;}
 
-    </style>
-</head>
-<body>
-<form action="/info/{{item.get('id',0)}}/" method="POST" >
-<table>
-    <tr>
-        <td>名称</td>
-        <td><input class="text" name="name" type="text" value="{{item.get('name','')}}"></td>
-    </tr>
-    <tr>
-        <td>内网IP</td>
-        <td><input class="text" name="internal_ip_addr" type="text" value="{{item.get('internal_ip_addr','')}}"></td>
-    </tr>
-    <tr>
-        <td>外网IP</td>
-        <td><input class="text" name="outside_ip_addr" type="text" value="{{item.get('outside_ip_addr','')}}"></td>
-    </tr>
-    <tr>
-        <td>所属业务</td>
-        <td>
-            <select name="category_id">
-                {%for k,v in cats.iteritems()%}
-                <option value="{{k}}" {%if item.get('cat_id',1) == k%}selected{%end%}>{{v}}</option>
-                {%end%}
-            </select>
-        </td>
-    </tr>
-    <tr>
-        <td>服务类型</td>
-        <td>
-            <select name="type_id">
-                {%for k,v in types.iteritems()%}
-                <option value="{{k}}" {%if item.get('type_id',1) == k%}selected{%end%}>{{v}}</option>
-                {%end%}
-            </select>
-        </td>
-    </tr>
-    <tr>
-        <td>是否虚拟机</td>
-        <td>
-            <input type="radio" name="virtual" value="1" {%if item.get('virtual',0) == 1 %}checked{%end%} /> 是
-            <input type="radio" name="virtual" value="0" {%if item.get('virtual',0) == 0 %}checked{%end%} /> 否
-        </td>
-    </tr>
-    <tr>
-        <td>状态</td>
-        <td>
-            <input type="radio" name="status" value="1" {%if item.get('status',0) == 1 %}checked{%end%} /> 正常
-            <input type="radio" name="status" value="0" {%if item.get('status',0) == 0 %}checked{%end%} /> 关闭
-        </td>
-    </tr>
-    <tr>
-        <td>备注</td>
-        <td>
-            <textarea name="note">{{item.get('note','')}}</textarea>
-        </td>
-    </tr>
-    <tr>
-        <td>排序</td>
-        <td><input class="text" name="sort_order" type="text" value="{{item.get('sort_order',0)}}"></td>
-    </tr>
-    <tr>
-        <td colspan="2" align="center">
-            <input type="submit" value="确认">
-            <input type="reset" value="取消">
-        </td>
-    </tr>
+        </style>
+    <div class="page-header">
+          <h1>新增/编辑服务器 <small>New/Edit Server</small></h1>
+    </div>
+        <div class="main-editor">
+            <form class="form-horizontal" role="form">
+              <div class="form-group">
+                <label for="inputEmail3" class="col-sm-2 control-label">名称</label>
+                <div class="col-sm-10">
+                  <input type="email" class="form-control" id="inputEmail3">
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="inputPassword3" class="col-sm-2 control-label">IP地址</label>
+                <div class="col-sm-10">
+                  <input type="password" class="form-control" id="inputPassword3">
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="inputPassword3" class="col-sm-2 control-label">负责人</label>
+                <div class="col-sm-10">
+                  <input type="password" class="form-control" >
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="inputPassword3" class="col-sm-2 control-label">集群</label>
+                <div class="col-sm-10">
+                  <input type="password" class="form-control" >
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="inputPassword3" class="col-sm-2 control-label">ISP服务商</label>
+                <div class="col-sm-10">
+                    <div class="dropdown">
+                      <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
+                        中国电信
+                        <span class="caret"></span>
+                      </button>
+                      <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">中国电信</a></li>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">中国联通</a></li>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">中国移动</a></li>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">中国网通</a></li>
+                      </ul>
+                    </div>
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="inputPassword3" class="col-sm-2 control-label">IDC机房</label>
+                <div class="col-sm-10">
 
-</table>
-</form>
+                  <div class="dropdown">
+                      <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown">
+                        兆维机房
+                        <span class="caret"></span>
+                      </button>
+                      <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu2">
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">兆维机房</a></li>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">电信通</a></li>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">酒仙桥</a></li>
+                      </ul>
+                    </div>
 
-</body>
-</html>
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="inputPassword3" class="col-sm-2 control-label">环境</label>
+                <div class="col-sm-10">
+                  <div class="dropdown">
+                      <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu3" data-toggle="dropdown">
+                        生产环境
+                        <span class="caret"></span>
+                      </button>
+                      <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu3">
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">生产环境</a></li>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">测试环境</a></li>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">开发环境</a></li>
+                      </ul>
+                    </div>
+                </div>
+              </div>
+
+              <div class="form-group">
+                <label for="inputPassword3" class="col-sm-2 control-label">角色</label>
+                <div class="col-sm-10">
+                  <div class="dropdown">
+                      <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu4" data-toggle="dropdown">
+                        生产环境
+                        <span class="caret"></span>
+                      </button>
+                      <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu4">
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">生产环境</a></li>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">测试环境</a></li>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">开发环境</a></li>
+                      </ul>
+                    </div>
+                </div>
+              </div>
+
+              <div class="form-group">
+                <label for="inputPassword3" class="col-sm-2 control-label">业务</label>
+                <div class="col-sm-10">
+                  <div class="dropdown">
+                      <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu5" data-toggle="dropdown">
+                        业主论坛
+                        <span class="caret"></span>
+                      </button>
+                      <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu5">
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">业主论坛</a></li>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">楼盘</a></li>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">家居</a></li>
+                      </ul>
+                    </div>
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="inputPassword3" class="col-sm-2 control-label">应用</label>
+                <div class="col-sm-10">
+                  <div class="dropdown">
+                      <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu6" data-toggle="dropdown">
+                        nginx前端
+                        <span class="caret"></span>
+                      </button>
+                      <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu6">
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">nginx前端</a></li>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">mysql数据库</a></li>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">PHP-FPM</a></li>
+                      </ul>
+                    </div>
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="inputPassword3" class="col-sm-2 control-label">状态</label>
+                <div class="col-sm-10">
+                    <label class="radio-inline"><input type="radio" name="status"> 运行中</label>
+                    <label class="radio-inline"><input type="radio" name="status"> 已停运</label>
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                  <button type="submit" class="btn btn-default">确认</button>
+                    <button type="submit" class="btn btn-default">取消</button>
+                </div>
+              </div>
+            </form>
+        </div>
+
+
+
+{% include footer.html %}
