--- a/templates/info.html
+++ b/templates/info.html
@@ -1,5 +1,18 @@
 {% include header.html %}
 {% include nav.html %}
+
+        <script>
+            $(function(){
+                $(".dropdown-select li a ").on('click',function(){
+                    var parentUI = $(this).parents(".dropdown-select");
+                    var v = $(this).attr("data-value");
+                    var txt = $(this).html();
+                    parentUI.prev("input").val(v);
+                    parentUI.prevAll("button").html(txt);
+                    parentUI.prevAll("button").append(' <span class="caret"></span>');
+                });
+            });
+        </script>
         <style>
             .main-editor{margin-right: 0px;margin-left: 0px;padding:0px 15px 15px;margin:0 -15px 15px;position:relative;min-width: 350px;max-width: 800px;}
             .col-sm-10{width:33%;}
@@ -9,131 +22,147 @@
           <h1>新增服务器 <small>New Server</small></h1>
     </div>
         <div class="main-editor">
-            <form class="form-horizontal" role="form">
+            <form class="form-horizontal" role="form" action="/server/add/" method="post">
               <div class="form-group">
-                <label for="inputEmail3" class="col-sm-2 control-label">名称</label>
+                <label class="col-sm-2 control-label">名称</label>
                 <div class="col-sm-10">
-                  <input type="email" class="form-control" id="inputEmail3">
+                  <input type="text" class="form-control" name="name" >
                 </div>
-                  <label for="inputPassword3" class="col-sm-2 control-label">IP地址</label>
+                  <label class="col-sm-2 control-label">IP地址</label>
                 <div class="col-sm-10">
-                  <input type="password" class="form-control" id="inputPassword3">
+                  <input type="text" class="form-control" name="ip_addr" >
                 </div>
               </div>
               <div class="form-group">
-                <label for="inputPassword3" class="col-sm-2 control-label">负责人</label>
+                <label  class="col-sm-2 control-label">负责人</label>
                 <div class="col-sm-10">
-                  <input type="password" class="form-control" >
+                  <input type="text" class="form-control" name="head_name" >
                 </div>
-                  <label for="inputPassword3" class="col-sm-2 control-label">集群</label>
+                  <label class="col-sm-2 control-label">集群</label>
                 <div class="col-sm-10">
-                  <input type="password" class="form-control" >
+                  <input type="text" class="form-control" name="cluster" >
                 </div>
               </div>
               <div class="form-group">
-                <label for="inputPassword3" class="col-sm-2 control-label">ISP服务商</label>
+                {% if list_choose.get('isp')%}
+                <label  class="col-sm-2 control-label">ISP服务商</label>
                 <div class="col-sm-10">
                     <div class="dropdown">
-                      <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
+                      <button class="btn btn-default dropdown-toggle" type="button"  data-toggle="dropdown">
                         中国电信
                         <span class="caret"></span>
                       </button>
                       <input type="hidden" name="isp" value="">
                       <ul class="dropdown-menu dropdown-select" role="menu" aria-labelledby="dropdownMenu1">
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">中国电信</a></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">中国联通</a></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">中国移动</a></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">中国网通</a></li>
+                        {% for k,v in list_choose['isp'].iteritems() %}
+                        <li role="presentation"><a role="menuitem" href="javascript:;" data-value="{{k}}">{{v}}</a></li>
+                        {% end %}
                       </ul>
                     </div>
                 </div>
-                  <label for="inputPassword3" class="col-sm-2 control-label">IDC机房</label>
+                {% end %}
+
+                {% if list_choose.get('isp')%}
+                <label class="col-sm-2 control-label">IDC机房</label>
                 <div class="col-sm-10">
                   <div class="dropdown">
-                      <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown">
+                      <button class="btn btn-default dropdown-toggle" type="button"  data-toggle="dropdown">
                         兆维机房
                         <span class="caret"></span>
                       </button>
                       <input type="hidden" name="idc" value="">
                       <ul class="dropdown-menu dropdown-select" role="menu" aria-labelledby="dropdownMenu2">
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">兆维机房</a></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">电信通</a></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">酒仙桥</a></li>
+                          {% for k,v in list_choose['idc'].iteritems() %}
+                        <li role="presentation"><a role="menuitem" href="javascript:;" data-value="{{k}}">{{v}}</a></li>
+                          {% end %}
                       </ul>
                     </div>
                 </div>
+                {% end %}
               </div>
+
               <div class="form-group">
-                <label for="inputPassword3" class="col-sm-2 control-label">环境</label>
+                {% if list_choose.get('environment')%}
+                <label class="col-sm-2 control-label">环境</label>
                 <div class="col-sm-10">
                   <div class="dropdown">
-                      <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu3" data-toggle="dropdown">
+                      <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">
                         生产环境
                         <span class="caret"></span>
                       </button>
                       <input type="hidden" name="environment" value="">
                       <ul class="dropdown-menu dropdown-select" role="menu" aria-labelledby="dropdownMenu3">
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">生产环境</a></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">测试环境</a></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">开发环境</a></li>
+                          {% for k,v in list_choose['environment'].iteritems() %}
+                        <li role="presentation"><a role="menuitem" href="javascript:;" data-value="{{k}}">{{v}}</a></li>
+                          {% end %}
                       </ul>
                     </div>
                 </div>
-                  <label for="inputPassword3" class="col-sm-2 control-label">角色</label>
+                  {% end %}
+                {% if list_choose.get('role')%}
+                <label class="col-sm-2 control-label">角色</label>
                 <div class="col-sm-10">
                   <div class="dropdown">
-                      <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu4" data-toggle="dropdown">
+                      <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">
                         生产环境
                         <span class="caret"></span>
                       </button>
                       <input type="hidden" name="role" value="">
                       <ul class="dropdown-menu dropdown-select" role="menu" aria-labelledby="dropdownMenu4">
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">生产环境</a></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">测试环境</a></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">开发环境</a></li>
+                          {% for k,v in list_choose['role'].iteritems() %}
+                        <li role="presentation"><a role="menuitem" href="javascript:;" data-value="{{k}}">{{v}}</a></li>
+                          {% end %}
                       </ul>
                     </div>
                 </div>
+                  {% end %}
               </div>
               <div class="form-group">
-                <label for="inputPassword3" class="col-sm-2 control-label">业务</label>
+                   {% if list_choose.get('business')%}
+                <label class="col-sm-2 control-label">业务</label>
                 <div class="col-sm-10">
                   <div class="dropdown">
-                      <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu5" data-toggle="dropdown">
+                      <button class="btn btn-default dropdown-toggle" type="button"  data-toggle="dropdown">
                         业主论坛
                         <span class="caret"></span>
                       </button>
                       <input type="hidden" name="business" value="">
                       <ul class="dropdown-menu dropdown-select" role="menu" aria-labelledby="dropdownMenu5">
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">业主论坛</a></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">楼盘</a></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">家居</a></li>
+                          {% for k,v in list_choose['business'].iteritems() %}
+                        <li role="presentation"><a role="menuitem" href="javascript:;" data-value="{{k}}">{{v}}</a></li>
+                          {% end %}
                       </ul>
                     </div>
                 </div>
-                  <label for="inputPassword3" class="col-sm-2 control-label">应用</label>
+                  {% end %}
+                  {% if list_choose.get('application')%}
+                  <label class="col-sm-2 control-label">应用</label>
                 <div class="col-sm-10">
                   <div class="dropdown">
-                      <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu6" data-toggle="dropdown">
+                      <button class="btn btn-default dropdown-toggle" type="button"  data-toggle="dropdown">
                         nginx前端
                         <span class="caret"></span>
                       </button>
                       <input type="hidden" name="application" value="">
                       <ul class="dropdown-menu dropdown-select" role="menu" aria-labelledby="dropdownMenu6">
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">nginx前端</a></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">mysql数据库</a></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">PHP-FPM</a></li>
+                          {% for k,v in list_choose['application'].iteritems() %}
+                        <li role="presentation"><a role="menuitem" href="javascript:;" data-value="{{k}}">{{v}}</a></li>
+                          {% end %}
                       </ul>
                     </div>
                 </div>
+                  {% end %}
               </div>
+                {% if list_choose.get('application')%}
               <div class="form-group">
-                <label for="inputPassword3" class="col-sm-2 control-label">状态</label>
+                <label class="col-sm-2 control-label">状态</label>
                 <div class="col-sm-10">
-                    <label class="radio-inline"><input type="radio" name="status" checked="checked"> 运行中</label>
-                    <label class="radio-inline"><input type="radio" name="status"> 已停运</label>
+                    {% for k,v in list_choose['status'].iteritems() %}
+                    <label class="radio-inline"><input type="radio" value="{{k}}" name="status"> {{v}}</label>
+                    {% end %}
                 </div>
               </div>
+                {% end %}
               <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
                     <button type="submit" class="btn btn-default">确认</button>
