--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
                  <td>{% if list_choose.get("role") and list_choose["role"].get(item.role) %}{{list_choose["role"][item.role]}}{% else %}-{% end %}</td>
                  <td>{{item.head_name}}</td>
                  <td>{% if list_choose.get("status") and list_choose["status"].get(item.status) %}{{list_choose["status"][item.status]}}{% else %}-{% end %}</td>
-                 <td><a href="/server/remove/?id={{item.id}}">删除</a> | <a href="/server/info/?id={{item.id}}">修改</a></td>
+                 <td><a href="/server/info/?id={{item.id}}" class="editor-item glyphicon glyphicon-cog"></a>  <a href="javascript:;" data-href="/server/remove/?id={{item.id}}" class="remove-item glyphicon glyphicon-remove"></a></td>
               </tr>
            {% end %}
            </tbody>
@@ -70,4 +70,25 @@
           </ul>
         </nav>
           {% end %}
+
+        <script>
+            $(function(){
+                $(".remove-item").on('click',function(){
+                    if (confirm("确定删除?")){
+                        var request_api = $(this).attr("data-href");
+                        var item = $(this);
+                        $.get(request_api,{}, function(data){
+                            if (data.status == 1){
+                                item.parents("tr").fadeOut("slow",function(){
+                                    item.parents("tr").remove();
+                                });
+                            }
+                        },'json');
+                    }
+                });
+            });
+
+
+
+        </script>
 {% include footer.html %}
