--- a/templates/info.html
+++ b/templates/info.html
@@ -26,21 +26,21 @@
               <div class="form-group">
                 <label class="col-sm-2 control-label">名称</label>
                 <div class="col-sm-10">
-                  <input type="text" class="form-control" name="name" >
+                  <input type="text" class="form-control" name="name" value="{% if server_info.name %}{{server_info.name}}{% end %}">
                 </div>
                   <label class="col-sm-2 control-label">IP地址</label>
                 <div class="col-sm-10">
-                  <input type="text" class="form-control" name="ip_addr" >
+                  <input type="text" class="form-control" name="ip_addr" value="{% if server_info.ip_addr %}{{server_info.ip_addr}}{% end %}" >
                 </div>
               </div>
               <div class="form-group">
                 <label  class="col-sm-2 control-label">负责人</label>
                 <div class="col-sm-10">
-                  <input type="text" class="form-control" name="head_name" >
+                  <input type="text" class="form-control" name="head_name" value="{% if server_info.head_name %}{{server_info.head_name}}{% end %}" >
                 </div>
                   <label class="col-sm-2 control-label">集群</label>
                 <div class="col-sm-10">
-                  <input type="text" class="form-control" name="cluster" >
+                  <input type="text" class="form-control" name="cluster" value="{% if server_info.cluster %}{{server_info.cluster}}{% end %}" >
                 </div>
               </div>
               <div class="form-group">
@@ -49,10 +49,12 @@
                 <div class="col-sm-10">
                     <div class="dropdown">
                       <button class="btn btn-default dropdown-toggle" type="button"  data-toggle="dropdown">
-                        中国电信
+                        {% if server_info.isp_id and list_choose['isp'][server_info.isp_id] %}
+                          {{list_choose['isp'][server_info.isp_id]}}
+                          {% end %}
                         <span class="caret"></span>
                       </button>
-                      <input type="hidden" name="isp" value="">
+                      <input type="hidden" name="isp" value="{{server_info.isp_id}}">
                       <ul class="dropdown-menu dropdown-select" role="menu" aria-labelledby="dropdownMenu1">
                         {% for k,v in list_choose['isp'].iteritems() %}
                         <li role="presentation"><a role="menuitem" href="javascript:;" data-value="{{k}}">{{v}}</a></li>
@@ -67,10 +69,12 @@
                 <div class="col-sm-10">
                   <div class="dropdown">
                       <button class="btn btn-default dropdown-toggle" type="button"  data-toggle="dropdown">
-                        兆维机房
+                        {% if server_info.idc_id and list_choose['idc'][server_info.idc_id] %}
+                          {{list_choose['idc'][server_info.idc_id]}}
+                          {% end %}
                         <span class="caret"></span>
                       </button>
-                      <input type="hidden" name="idc" value="">
+                      <input type="hidden" name="idc" value="{{server_info.idc_id}}">
                       <ul class="dropdown-menu dropdown-select" role="menu" aria-labelledby="dropdownMenu2">
                           {% for k,v in list_choose['idc'].iteritems() %}
                         <li role="presentation"><a role="menuitem" href="javascript:;" data-value="{{k}}">{{v}}</a></li>
@@ -87,10 +91,12 @@
                 <div class="col-sm-10">
                   <div class="dropdown">
                       <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">
-                        生产环境
+                          {% if server_info.environment and list_choose['environment'][server_info.environment] %}
+                          {{list_choose['environment'][server_info.environment]}}
+                          {% end %}
                         <span class="caret"></span>
                       </button>
-                      <input type="hidden" name="environment" value="">
+                      <input type="hidden" name="environment" value="{{server_info.environment}}">
                       <ul class="dropdown-menu dropdown-select" role="menu" aria-labelledby="dropdownMenu3">
                           {% for k,v in list_choose['environment'].iteritems() %}
                         <li role="presentation"><a role="menuitem" href="javascript:;" data-value="{{k}}">{{v}}</a></li>
@@ -104,10 +110,12 @@
                 <div class="col-sm-10">
                   <div class="dropdown">
                       <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">
-                        生产环境
+                        {% if server_info.role and list_choose['role'][server_info.role] %}
+                          {{list_choose['role'][server_info.role]}}
+                          {% end %}
                         <span class="caret"></span>
                       </button>
-                      <input type="hidden" name="role" value="">
+                      <input type="hidden" name="role" value="{{server_info.role}}">
                       <ul class="dropdown-menu dropdown-select" role="menu" aria-labelledby="dropdownMenu4">
                           {% for k,v in list_choose['role'].iteritems() %}
                         <li role="presentation"><a role="menuitem" href="javascript:;" data-value="{{k}}">{{v}}</a></li>
@@ -123,10 +131,12 @@
                 <div class="col-sm-10">
                   <div class="dropdown">
                       <button class="btn btn-default dropdown-toggle" type="button"  data-toggle="dropdown">
-                        业主论坛
+                        {% if server_info.business_id and list_choose['business'][server_info.business_id] %}
+                          {{list_choose['business'][server_info.business_id]}}
+                          {% end %}
                         <span class="caret"></span>
                       </button>
-                      <input type="hidden" name="business" value="">
+                      <input type="hidden" name="business" value="{{server_info.business_id}}">
                       <ul class="dropdown-menu dropdown-select" role="menu" aria-labelledby="dropdownMenu5">
                           {% for k,v in list_choose['business'].iteritems() %}
                         <li role="presentation"><a role="menuitem" href="javascript:;" data-value="{{k}}">{{v}}</a></li>
@@ -140,10 +150,12 @@
                 <div class="col-sm-10">
                   <div class="dropdown">
                       <button class="btn btn-default dropdown-toggle" type="button"  data-toggle="dropdown">
-                        nginx前端
+                        {% if server_info.application_id and list_choose['application'][server_info.application_id] %}
+                          {{list_choose['application'][server_info.application_id]}}
+                          {% end %}
                         <span class="caret"></span>
                       </button>
-                      <input type="hidden" name="application" value="">
+                      <input type="hidden" name="application" value="{{server_info.application_id}}">
                       <ul class="dropdown-menu dropdown-select" role="menu" aria-labelledby="dropdownMenu6">
                           {% for k,v in list_choose['application'].iteritems() %}
                         <li role="presentation"><a role="menuitem" href="javascript:;" data-value="{{k}}">{{v}}</a></li>
@@ -153,18 +165,27 @@
                 </div>
                   {% end %}
               </div>
-                {% if list_choose.get('application')%}
+                {% if list_choose.get('status')%}
               <div class="form-group">
                 <label class="col-sm-2 control-label">状态</label>
                 <div class="col-sm-10">
                     {% for k,v in list_choose['status'].iteritems() %}
-                    <label class="radio-inline"><input type="radio" value="{{k}}" name="status"> {{v}}</label>
+                    {% if k == server_info.status %}
+                    <label class="radio-inline"><input type="radio" value="{{k}}" checked name="status"> {{v}}</label>
+                    {% else %}
+                    <label class="radio-inline"><input type="radio" value="{{k}}"  name="status"> {{v}}</label>
+                    {% end %}
+
+
                     {% end %}
                 </div>
               </div>
                 {% end %}
               <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
+                    {% if server_info.id %}
+                    <input type="hidden" name="id" value="{{server_info.id}}">
+                    {% end %}
                     <button type="submit" class="btn btn-default">确认</button>
                     <button type="reset" class="btn btn-default">取消</button>
                 </div>
