--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,3 +1,14 @@
+<script>
+    $(function(){
+        $(".dropdown-menu.dropdown-menu-right li a").on("click",function(){
+            var parentButton = $(this).parents(".dropdown-menu.dropdown-menu-right").prev("button");
+            parentButton.html($(this).html());
+            parentButton.append(' <span class="caret"></span>');
+            $("#search_param").attr("name", $(this).attr("data-value"))
+        });
+
+    });
+</script>
 <nav class="navbar navbar-default" role="navigation">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -21,7 +32,7 @@
                         <li><a href="/server/add/">新增</a></li>
                     </ul>
                 </li>
-                <li><a href="#">业务</a></li>
+                <li><a href="/business/">业务</a></li>
 
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">其他工具 <span class="caret"></span></a>
@@ -50,7 +61,7 @@
             </form>
             {% end %}
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">龙念同学</a></li>
+                <li><a href="javascript:;">{% if user.get("real_name")%} {{user["real_name"]}} {% end %}</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">操作 <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
@@ -58,6 +69,7 @@
                         <li><a href="#">我的资料</a></li>
                         <li class="divider"></li>
                         <li><a href="#">系统通知</a></li>
+                        <li><a href="/logout/">退出</a></li>
                   </ul>
                 </li>
             </ul>
