--- a/templates/business/index.html
+++ b/templates/business/index.html
@@ -1,27 +1,34 @@
 {% include ../header.html %}
 {% include ../nav.html %}
-
+        <style>
+            .form-control{width:60%;}
+            .col-sm-2{width:12%;}
+        </style>
         <div class="page-header">
           <h1>业务列表 <small>Business List</small></h1>
         </div>
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">新增</button>
+        <button type="button" class="btn btn-primary addItem" >新增</button>
         <button type="button" class="btn btn-danger" onclick="window.history.back();">取消</button>
 
         <table class="table table-striped table-hover table-bordered" style="margin-top: 10px;">
            <thead>
-              <tr>
+              <tr class="item-1">
                   <th style="width: 6%">操作</th>
                   <th style="width: 6%">编号</th>
                   <th>名称</th>
               </tr>
            </thead>
+            {% if lists %}
            <tbody>
-                <tr>
-                    <td><a href="javascript:;" class="editor-item glyphicon glyphicon-cog"></a>  <a href="javascript:;" data-href="" class="remove-item glyphicon glyphicon-remove"></a></td>
-                    <td>1</td>
-                    <td>WEB</td>
+                {% for item in lists %}
+                <tr class="item-{{item.id}}">
+                    <td><a href="javascript:;" class="editor-item glyphicon glyphicon-cog" data-value="{{item.id}}"></a>  <a href="javascript:;" data-href="/business/remove/" class="remove-item glyphicon glyphicon-remove" data-value="{{item.id}}" ></a></td>
+                    <td>{{item.id}}</td>
+                    <td>{{item.name}}</td>
                 </tr>
+                {% end %}
            </tbody>
+            {% end %}
         </table>
 
 <!-- Modal -->
@@ -33,47 +40,91 @@
         <h4 class="modal-title" id="myModalLabel">新增项</h4>
       </div>
       <div class="modal-body">
-        <label class="col-sm-2 control-label">名称</label> <input type="text" name="name" class="form-control">
+        <label class="col-sm-2 control-label">名称</label> <input type="text" name="name" class="form-control" id="nameID">
       </div>
       <div class="modal-footer">
-          <span id="iMessage">提示信息</span>
+        <span id="iMessage"></span>
+        <input type="hidden" name="businessID" id="itemID" value="" />
         <button type="button" class="btn btn-primary" id="AddBtn">确 定</button>
         <button type="button" class="btn btn-default" data-dismiss="modal">取 消</button>
       </div>
     </div>
   </div>
 </div>
-
-
         <script>
             $(function(){
+                $(".addItem").on('click',function(){
+                    $("#myModalLabel").html('新增项');
+                    $("#itemID").val('');
+                    $("#nameID").val('');
+                    $('#myModal').modal('show');
+                });
+
+                $(".remove-item").on('click', function(){
+                    if (confirm('确认删除？')){
+                      var item_id = $(this).attr("data-value")
+                      if (item_id.length == 0){
+                        return false;
+                      }
+                      var item = $(this);
+                      var request_api = item.attr('data-href');
+                      $.post(request_api,{"id": item_id},function(data){
+                          if (data.status == 1){
+                                item.parents("tr").fadeOut("slow",function(){
+                                    item.parents("tr").remove();
+                                });
+                            }else{
+                                alert(data.message);
+                            }
+                      },'json')
+                    }
+
+                });
+
+                $(".editor-item").on('click',function(){
+                    $("#myModalLabel").html('编辑项');
+                    var item_id = $(this).attr('data-value');
+                    var name = $(this).parents("tr").children("td").last().html()
+                    $("#myModal #nameID").val(name);
+                    $("#myModal #itemID").val(item_id);
+                    $('#myModal').modal('show');
+                });
+
+
                 $("#AddBtn").on('click',function(){
-                    var name = $("#myModal input").val();
+                    var name = $("#myModal #nameID").val();
+                    var item_id = $("#myModal #itemID").val();
+                    if (item_id == 'undefined' || item_id.length == 0){
+                      item_id = 0;
+                    }
+
                     if (name.length == 0) {
                         $("#iMessage").html('请输入名称');
                         return;
                     }
-                    var $btn = $(this).button('loading');
-                    var innerHtml = '<tr>';
-                    innerHtml += '<td><a href="javascript:;" class="editor-item glyphicon glyphicon-cog"></a>  <a href="javascript:;" data-href="" class="remove-item glyphicon glyphicon-remove"></a></td>';
-                    innerHtml += '<td>1</td>';
-                    innerHtml += '<td>WEB</td>';
-                    innerHtml += '</tr>';
 
-                    $("table tbody").prepend(innerHtml);
-                    $('#myModal').modal('hide')
-                    $btn.button("reset");
-                    return
-                    $.post("/business/add/",{"name":name},function(data){
+                    var $btn = $(this).button('loading');
+                    $.post("/business/add/",{"name":name, "business_id": item_id},function(data){
                         if (data.status != 1){
                             $("#iMessage").html(data.message);
                             $btn.button("reset");
                         }else{
-                            var innerHtml = '<td><a href="javascript:;" class="editor-item glyphicon glyphicon-cog"></a>  <a href="javascript:;" data-href="" class="remove-item glyphicon glyphicon-remove"></a></td>';
-                            innerHtml += '<td>1</td>';
-                            innerHtml += '<td>WEB</td>';
-                            $("table tbody").prepend(innerHtml);
-                            $("#myModal").hide();
+                            setTimeout(function(){
+                              if (item_id == 0){
+                                  var innerHtml = '<tr class="item-'+data.data.business_id+'">';
+                                  innerHtml += '<td><a href="javascript:;" class="editor-item glyphicon glyphicon-cog" data-value="'+data.data.business_id+'"></a>  <a href="javascript:;" data-href="/business/remove/" class="remove-item glyphicon glyphicon-remove" data-value="'+data.data.business_id+'"></a></td>';
+                                  innerHtml += '<td>'+data.data.business_id+'</td>';
+                                  innerHtml += '<td>'+name+'</td>';
+                                  innerHtml += '</tr>';
+                                  $("table tbody").prepend(innerHtml);
+                              }else{
+                                  $(".item-"+item_id).children("td").last().html(name)
+                              }
+                              $('#myModal').modal('hide');
+                              $btn.button("reset");
+                            },1000);
+
+
                         }
                     },'json');
                 });
