--- a/templates/nav.html
+++ b/templates/nav.html
@@ -37,7 +37,7 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">其他工具 <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                        <li><a href="#">用户管理</a></li>
+                        <li><a href="/user/">用户管理</a></li>
                         <li class="divider"></li>
                         <li><a href="#">机房管理</a></li>
                         <li><a href="#">运营商管理</a></li>
