--- a/templates/header.html
+++ b/templates/header.html
@@ -24,6 +24,8 @@
             .navbar-brand{padding:0px 5px;}
             .page-header h1{font-size:30px;}
             li{display: block;}
+            .form-control{width:60%;}
+            .col-sm-2{width:17%;}
         </style>
     </head>
 <body>
