--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
            <tbody>
            {% for item in lists %}
             {% if item.status == 2 %}
-              <tr class="warning">
+              <tr class="danger">
             {% else %}
               <tr>
             {% end %}
